--- a/notebooks/msva.ipynb
+++ b/notebooks/msva.ipynb
@@ -1216,7 +1216,12 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1905,7 +1910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Multiprocessing"
+    "# Infer a summary"
    ]
   },
   {
@@ -1931,9 +1936,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import multiprocessing\n",
-    "import collections\n",
-    "import random"
+    "config_file = \"/home/shuaman/video_sm/video_summarization/configs/config_deployment.json\""
    ]
   },
   {
@@ -1942,11 +1945,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Worker = collections.namedtuple(\"Worker\", (\"queue\", \"process\"))\n",
-    "WorkerInitData = collections.namedtuple(\n",
-    "    \"WorkerInitData\", (\"num\", \"sweep_id\", \"sweep_run_name\", \"config\")\n",
-    ")\n",
-    "WorkerDoneData = collections.namedtuple(\"WorkerDoneData\", (\"f_score\"))"
+    "use_wandb = False"
    ]
   },
   {
@@ -1955,15 +1954,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reset_wandb_env():\n",
-    "    exclude = {\n",
-    "        \"WANDB_PROJECT\",\n",
-    "        \"WANDB_ENTITY\",\n",
-    "        \"WANDB_API_KEY\",\n",
-    "    }\n",
-    "    for k, v in os.environ.items():\n",
-    "        if k.startswith(\"WANDB_\") and k not in exclude:\n",
-    "            del os.environ[k]"
+    "path_weights_summe = \"/home/shuaman/video_sm/MSVA/model_weights/summe_random_non_overlap_0.5359.tar.pth\"\n",
+    "path_weights_tvsum = \"/home/shuaman/video_sm/MSVA/model_weights/tvsum_random_non_overlap_0.6271.tar.pth\""
    ]
   },
   {
@@ -1972,28 +1964,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(sweep_q, worker_q, config_file, splits, n_split):\n",
-    "    reset_wandb_env()\n",
-    "    worker_data = worker_q.get()\n",
-    "    run_name = \"{}-{}\".format(worker_data.sweep_run_name, worker_data.num)\n",
-    "    config = configure_model(config_file, use_wandb=True)\n",
-    "    \n",
-    "    run = wandb.init(\n",
-    "        group=worker_data.sweep_id,\n",
-    "        job_type=worker_data.sweep_run_name,\n",
-    "        name=run_name,\n",
-    "        config=config,\n",
-    "    )\n",
-    "    \n",
-    "    config = run.config\n",
-    "    run.watch_called = False\n",
-    "    \n",
-    "    vsm = VideoSumarizer(config, use_wandb=False)\n",
-    "    f_score, maxkt, maxsp, maxtrl, maxtsl = vsm.train(splits[n_split], n_split+1)\n",
-    "    \n",
-    "    run.log(dict(f_score=f_score))\n",
-    "    wandb.join()\n",
-    "    sweep_q.put(WorkerDoneData(f_score=f_score))"
+    "set_seed(12345)"
    ]
   },
   {
@@ -2002,77 +1973,253 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PROJECT_WANDB = \"sports_video_summarization\""
+    "config = configure_model(config_file, use_wandb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device cuda:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "vsm = VideoSumarizer(config, use_wandb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def main():\n",
-    "    set_seed(12345)\n",
-    "    use_wandb = False\n",
-    "    config_file = \"/home/shuaman/video_sm/video_summarization/config_tvsum_canonical.json\"\n",
-    "    config_general = configure_model(config_file, use_wandb)\n",
+    "vsm.load_weights_descriptor_models()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing video\n",
+      "flow optical\n",
+      "extracting featres of rgb\n",
+      "extracting featres of flow\n",
+      "calculatin change points\n",
+      "forward prop\n",
+      "generating summary\n",
+      "CPU times: user 5min 12s, sys: 5.82 s, total: 5min 18s\n",
+      "Wall time: 1min 56s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "tam, res_w, res_h, fps, dur_orig, dur_spotlight, n_segments = vsm.infer('/data/shuaman/video_summarization/datasets/raw_datasets/VSUMM/new_database/v71.avi',\n",
+    "                                                                                             proportion=0.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16553384,\n",
+       " 320,\n",
+       " 240,\n",
+       " 29.916666666666668,\n",
+       " 275.0306406685237,\n",
+       " 41.1142061281337,\n",
+       " 11)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tam, res_w, res_h, fps, dur_orig, dur_spotlight, n_segments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.553384"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tam/1e6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., ..., 0., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "machine_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1230.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "machine_summary.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8228"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(machine_summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import groupby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def groups(l):\n",
+    "    return [sum(g) for i, g in groupby(l) if i == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[30.0, 255.0, 165.0, 120.0, 90.0, 30.0, 45.0, 150.0, 195.0, 90.0, 60.0]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groups(machine_summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(groups(machine_summary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., ..., 0., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_segments = 0\n",
+    "n_frames_spotlight = 0\n",
+    "for frame_idx in range(len(machine_summary)):\n",
+    "    if machine_summary[frame_idx]:\n",
+    "        n_frames_spotlight += 1\n",
+    "        n_segments += 1 if machine_summary[frame_idx]==0 else n_segments\n",
     "    \n",
-    "    split_name = f'path_split_{config_general.type_dataset}_{config_general.type_setting}'\n",
-    "    path_split = vars(config_general)[split_name]\n",
-    "    \n",
-    "    \n",
-    "    splits = parse_configuration(path_split)\n",
-    "    \n",
-    "    num_folds = len(splits)\n",
-    "    \n",
-    "    sweep_q = multiprocessing.Queue()\n",
-    "    workers = []\n",
-    "    \n",
-    "    for num in range(num_folds):\n",
-    "        q = multiprocessing.Queue()\n",
-    "        p = multiprocessing.Process(\n",
-    "            target=train, kwargs=dict(sweep_q=sweep_q, worker_q=q, config_file=config_file,\n",
-    "                                     splits=splits, n_split=num)\n",
-    "        )\n",
-    "        p.start()\n",
-    "        workers.append(Worker(queue=q, process=p))\n",
     "        \n",
-    "    sweep_run = wandb.init()\n",
-    "    sweep_id = sweep_run.sweep_id or \"unknown\"\n",
-    "    sweep_url = sweep_run.get_sweep_url()\n",
-    "    project_url = sweep_run.get_project_url()\n",
-    "    sweep_group_url = \"{}/groups/{}\".format(project_url, sweep_id)\n",
-    "    sweep_run.notes = sweep_group_url\n",
-    "    sweep_run.save()\n",
-    "    sweep_run_name = sweep_run.name or sweep_run.id or \"unknown\"\n",
-    "    \n",
-    "    metrics = []\n",
-    "    \n",
-    "    for num in range(num_folds):\n",
-    "        worker = workers[num]\n",
-    "        # start worker\n",
-    "        worker.queue.put(\n",
-    "            WorkerInitData(\n",
-    "                sweep_id=sweep_id,\n",
-    "                num=num,\n",
-    "                sweep_run_name=sweep_run_name,\n",
-    "                config=dict(sweep_run.config),\n",
-    "            )\n",
-    "        )\n",
-    "        # get metric from worker\n",
-    "        result = sweep_q.get()\n",
-    "        # wait for worker to finish\n",
-    "        worker.process.join()\n",
-    "        # log metric to sweep_run\n",
-    "        metrics.append(result.f_score)\n",
-    "\n",
-    "    sweep_run.log(dict(f_score=sum(metrics) / len(metrics)))\n",
-    "    wandb.join()\n",
-    "\n",
-    "    print(\"*\" * 40)\n",
-    "    print(\"Sweep URL:       \", sweep_url)\n",
-    "    print(\"Sweep Group URL: \", sweep_group_url)\n",
-    "    print(\"*\" * 40)"
+    "    "
    ]
   },
   {
@@ -2080,7 +2227,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# video  3 min duration\n",
+    "# CPU times: user 5min 22s, sys: 5.13 s, total: 5min 27s\n",
+    "# Wall time: 1min 27s"
+   ]
   }
  ],
  "metadata": {
