--- a/notebooks/pca_datasets.ipynb
+++ b/notebooks/pca_datasets.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +218,205 @@
        "(69676, 1024)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.605319"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(feat[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999745362396"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum((feat[2]/np.linalg.norm(feat[2]))**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00049218, 0.        , 0.01296701, ..., 0.        , 0.00243624,\n",
+       "       0.00417015], dtype=float32)"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feat[2]/np.linalg.norm(feat[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00049218, 0.        , 0.01296701, ..., 0.        , 0.00243624,\n",
+       "       0.00417015], dtype=float32)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessing.normalize(feat, norm='l2')[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(preprocessing.normalize(feat, norm='l2')[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1024])"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor(feat[0]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1024])"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor(feat[0]).squeeze().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1024, 1])"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor(feat[0]).unsqueeze(1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00049218, 0.        , 0.01296701, ..., 0.        , 0.00243624,\n",
+       "       0.00417015], dtype=float32)"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessing.normalize(feat, norm='l2')[2]/np.linalg.norm(preprocessing.normalize(feat, norm='l2')[2])"
    ]
   },
   {
@@ -375,6 +567,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.35702791296535"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(preprocessing.normalize(xd, norm='l2')[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
    "outputs": [
@@ -433,22 +645,6 @@
    "source": [
     "a = None"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1952443596.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_6846/1952443596.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    xdd(\"xd\" if a is not None)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1099,27 +1295,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999996414745898"
+       "1.000000150419107"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(features_gn_orig[0] ** 2)"
+    "np.sum(features_gn_orig[2] ** 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1324,7 @@
        "(55522, 1024)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,22 +1335,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2466.127"
+       "2495.5127"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(features_rgb_orig[0] ** 2)"
+    "np.sum(features_rgb_orig[2] ** 2)"
    ]
   },
   {
@@ -1179,22 +1375,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "122.50726"
+       "128.57715"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(features_flow_orig[0] ** 2)"
+    "np.sum(features_flow_orig[2] ** 2)"
    ]
   },
   {
