--- a/notebooks/msva.ipynb
+++ b/notebooks/msva.ipynb
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1927,8 @@
     "import wandb\n",
     "import tqdm\n",
     "from src.utils import parse_arguments_train, set_seed, configure_model, parse_configuration\n",
-    "from src.models import VideoSumarizer"
+    "from src.models import VideoSumarizer\n",
+    "import math"
    ]
   },
   {
@@ -2004,7 +2005,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing video\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shuaman/miniconda3/envs/vsm/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow optical\n",
+      "extracting featres of rgb\n",
+      "extracting featres of flow\n",
+      "calculatin change points\n",
+      "forward prop\n",
+      "generating summary\n",
+      "CPU times: user 5min 17s, sys: 4.13 s, total: 5min 21s\n",
+      "Wall time: 1min 58s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "video_name, tam, res_w, res_h, fps, dur_orig, dur_spotlight, n_segments = vsm.infer('/data/shuaman/video_summarization/datasets/raw_datasets/VSUMM/new_database/v71.avi',\n",
+    "                                                                                             proportion=0.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('v71.avi',\n",
+       " 16553384,\n",
+       " 320,\n",
+       " 240,\n",
+       " 29.916666666666668,\n",
+       " 275.0306406685237,\n",
+       " 41.1142061281337,\n",
+       " 11)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_name, tam, res_w, res_h, fps, dur_orig, dur_spotlight, n_segments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mimetypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mimetypes.init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'text/csv'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mimetypes.types_map['.csv']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2016,22 +2123,75 @@
       "extracting featres of rgb\n",
       "extracting featres of flow\n",
       "calculatin change points\n",
-      "forward prop\n",
-      "generating summary\n",
-      "CPU times: user 5min 12s, sys: 5.82 s, total: 5min 18s\n",
-      "Wall time: 1min 56s\n"
+      "forward prop\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
-    "tam, res_w, res_h, fps, dur_orig, dur_spotlight, n_segments = vsm.infer('/data/shuaman/video_summarization/datasets/raw_datasets/VSUMM/new_database/v71.avi',\n",
-    "                                                                                             proportion=0.15)"
+    "video_name, tam, res_w, res_h, fps, dur_orig, summary, change_points, n_frames, n_frame_per_seg, picks = vsm.summarize_video('/data/shuaman/video_summarization/datasets/raw_datasets/VSUMM/new_database/v71.avi')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('v71.avi', 16553384, 320, 240, 29.916666666666668, 275.0306406685237)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_name, tam, res_w, res_h, fps, dur_orig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generating summary\n"
+     ]
+    }
+   ],
+   "source": [
+    "dur_spotlight, n_segments = vsm.generate_summary_proportion('/data/shuaman/video_summarization/datasets/raw_datasets/VSUMM/new_database/v71.avi',\n",
+    "                                                            summary, change_points, n_frames, n_frame_per_seg, picks, 0.15, \"output.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(41.1142061281337, 11)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dur_spotlight, n_segments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2206,122 @@
        " 11)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tam, res_w, res_h, fps, dur_orig, dur_spotlight, n_segments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.6"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(tam/1e6,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.9"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(fps,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.floor(round(dur_orig,0)/60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(dur_orig,0)%60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "round(fps,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16553384,\n",
+       " 320,\n",
+       " 240,\n",
+       " 29.916666666666668,\n",
+       " 275.0306406685237,\n",
+       " 41.1142061281337,\n",
+       " 11)"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
