--- a/notebooks/msva.ipynb
+++ b/notebooks/msva.ipynb
@@ -2153,6 +2153,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_dummy = {\n",
+    "    \"summary\": summary,\n",
+    "    \"change_points\": change_points,\n",
+    "    \"n_frames\": n_frames,\n",
+    "    \"n_frame_per_seg\": n_frame_per_seg,\n",
+    "    \"picks\": picks\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"dummy.pk\"\n",
+    "\n",
+    "pickle.dump(dict_dummy, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model = pickle.load(open(\"1o353cGlrlJgAgnW-Pf3S3pSTt43qNIMk.pk\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loaded_model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
